--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,5 @@
 <resources>
     <string name="app_name">ToolsDisplay</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="welcome_to">Welcome To</string>
     <string name="second_welcome_note">Power Tools | Store App</string>
@@ -19,5 +10,13 @@
     <string name="no_account_label">Don\'t have an account?</string>
     <string name="sign_up">Sign Up</string>
     <string name="home_title">Brochure</string>
+
+    <string name="error_connection_title">Connection Error</string>
+    <string name="error_connection_message">No internet connection. Please try again.</string>
+    <string name="error_generic_title">Unable to Connect</string>
+    <string name="error_generic_message">Something went wrong. Please try again.</string>
+
+    <string name="reload">Reload</string>
+    <string name="sort">Sort</string>
 
 </resources>
